--- a/pages/AboutUs/css/style.css
+++ b/pages/AboutUs/css/style.css
@@ -227,6 +227,10 @@ main {
     z-index: 999;
 }
 
+.catalog-routes_col {
+    background: rgba(245, 245, 245, 1);
+    border-radius: 0 25px 25px 0;
+}
 
 .catalog_popup_box {
     position: absolute;
@@ -337,6 +341,7 @@ main {
     border: none;
     background: none;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .nav_routes > i {
