--- a/css/media.css
+++ b/css/media.css
@@ -402,6 +402,7 @@
     .reg_data_input {
         padding: 10px 18px;
         font-size: 12px;
+        min-height: 40px;
     }
     .reg_mail_input {
         padding: 10px 18px;
