--- a/css/main.css
+++ b/css/main.css
@@ -1277,7 +1277,6 @@ body.Hidden {
     height: 90%;
     border-radius: 40px;
     background: #fff;
-    gap: 10px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -1302,7 +1301,7 @@ body.Hidden {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 40px;
+    gap: 10px;
     width: 100%;
 }
 
@@ -1360,6 +1359,16 @@ body.Hidden {
     gap: 10px;
     transition: 0.2s ease-in;
 }
+
+.reg_main_title {
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    color: #000;
+    align-self: center;
+    padding: 0 0 10px;
+}
+
 .reg_name_input.Error {
     border: 1px solid rgba(219, 47, 47, 1);
     transition: 0.2s;
@@ -1677,6 +1686,15 @@ body.Hidden {
     gap: 10px;
 }
 
+.log_main_title {
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    color: #000;
+    align-self: center;
+    padding: 0 0 10px;
+}
+
 .log_mail_input {
     outline: none;
     padding: 14px 22px;
@@ -1753,9 +1771,9 @@ body.Hidden {
     background: none;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
-    font-size: 13px;
+    font-size: 12px;
     cursor: pointer;
-    color: #000;
+    color: rgba(96, 174, 207, 1);
 }
 
 .forget_password_wrapper.Active {
@@ -1781,8 +1799,8 @@ body.Hidden {
     height: 40vh;
     padding: 10px;
     gap: 15px;
-    border-radius: 5px;
     background: #fff;
+    border-radius: 25px;
     border: 1px solid gainsboro;
 }
 
@@ -1865,5 +1883,5 @@ body.Hidden {
     border: none;
     background: none;
     cursor: pointer;
-    color: #000;
+    color: rgba(96, 174, 207, 1);
 }
