--- a/css/media.css
+++ b/css/media.css
@@ -492,6 +492,12 @@
         width: 100%;
         font-size: 13px;
     }
+    .reg_main_title {
+        font-size: 15px;
+    }
+    .log_main_title {
+        font-size: 15px;
+    }
 }
 
 @media screen and (max-width: 450px) {
